--- a/src/site/_includes/components/notes/footer/comment.njk
+++ b/src/site/_includes/components/notes/footer/comment.njk
@@ -1,8 +1,8 @@
 <script src="https://giscus.app/client.js"
         data-repo="bsaubolle/radical-rogerian"
         data-repo-id="R_kgDOLCysDg"
-        data-category="[ENTER CATEGORY NAME HERE]"
-        data-category-id="[ENTER CATEGORY ID HERE]"
+        data-category="General"
+        data-category-id="DIC_kwDOLCysDs4CcwMJ"
         data-mapping="pathname"
         data-strict="0"
         data-reactions-enabled="1"
