--- a/src/site/_includes/components/notes/footer/comment.njk
+++ b/src/site/_includes/components/notes/footer/comment.njk
@@ -1,15 +1,7 @@
-<script src="https://giscus.app/client.js"
-        data-repo="bsaubolle/radical-rogerian"
-        data-repo-id="R_kgDOLCysDg"
-        data-category="General"
-        data-category-id="DIC_kwDOLCysDs4CcwMJ"
-        data-mapping="pathname"
-        data-strict="0"
-        data-reactions-enabled="1"
-        data-emit-metadata="0"
-        data-input-position="bottom"
-        data-theme="dark"
-        data-lang="en"
+<script src="https://utteranc.es/client.js"
+        repo="bsaubolle/radical-rogerian"
+        issue-term="pathname"
+        theme="github-dark"
         crossorigin="anonymous"
         async>
 </script>
